--- a/assets/style.css
+++ b/assets/style.css
@@ -70,7 +70,7 @@ input[type="number"]::-webkit-outer-spin-button {
 }
 input[type="number"] {
   -moz-appearance: textfield; /* For Firefox */
-  
+
 }
 
 @media only screen and (max-width: 768px) {
@@ -91,7 +91,7 @@ input[type="number"] {
   height: 50px;
   border-radius: 100%;
   border: 1px solid rgb(255, 255, 255);
-  transition: all 200ms ease-out;
+  transition: none;
   position: fixed;
   pointer-events: none;
   left: 0;
@@ -110,7 +110,7 @@ input[type="number"] {
   transform: translate(-50%, -50%);
   pointer-events: none;
   z-index: 999;
-  transition: -100s;
+  transition: none;
 }
 
 .hover {
