--- a/assets/style.css
+++ b/assets/style.css
@@ -70,7 +70,7 @@ input[type="number"]::-webkit-outer-spin-button {
 }
 input[type="number"] {
   -moz-appearance: textfield; /* For Firefox */
-
+  
 }
 
 @media only screen and (max-width: 768px) {
@@ -91,7 +91,7 @@ input[type="number"] {
   height: 50px;
   border-radius: 100%;
   border: 1px solid rgb(255, 255, 255);
-  transition: none;
+  transition: all 200ms ease-out;
   position: fixed;
   pointer-events: none;
   left: 0;
