--- a/assets/style.css
+++ b/assets/style.css
@@ -110,7 +110,7 @@ input[type="number"] {
   transform: translate(-50%, -50%);
   pointer-events: none;
   z-index: 999;
-  transition: none;
+  transition: -100s;
 }
 
 .hover {
